data/derived/comb/progs/unify/prog5972.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 3);;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type
         int -> (int -> int * bool) * int
       Type int is not compatible with type (int -> int * bool) * int 
